--- a/templates/ratings.html
+++ b/templates/ratings.html
@@ -19,7 +19,7 @@
             {% endfor %}
           </select>
         </label>
-        <input type="hidden" name="movie_id" value="{{ movie.id }}"/>
+        <input type="hidden" name="movie_id" value="{{ movie.key().id() }}"/>
         <input type="submit" value="Rate it!"/> 
       </form>
     </li>
