modifications to main, templates

--- a/templates/ratings.html
+++ b/templates/ratings.html
@@ -11,15 +11,12 @@
         <label>
           My Rating:
           <select name="rating">
-            <!-- TODO: If the user has rated a movie, make the select box default to that rating when they visit this page.
-                 Hint: How can you use jinja2's templates to include a tag (or text) only
-                 if a server side condition is met?  -->
             {% for rating in ["How was it?", "*", "**", "***", "****", "*****"] %}
-              <option>{{ rating }}</option>
+              <option {% if rating==movie.rating %}selected{% endif %}>{{ rating }}</option>
             {% endfor %}
           </select>
         </label>
-        <input type="hidden" name="movie_id" value="{{ movie.key().id() }}"/>
+        <input type="hidden" name="movie_id" value="{{ movie.id }}"/>
         <input type="submit" value="Rate it!"/> 
       </form>
     </li>
